--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "antd": "^4.18.9",
     "axios": "^0.26.0",
     "dotenv": "^16.0.0",
